# game_of_life

./: Cargo.toml  README.md
src/: main.rs
